--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="icon" type="image/svg+xml" href="/portfolio-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Hello, my name is David. I create beautiful, full stack web experiences with secure technologies and clean and scalable code."
+    />
     <title>David Slade</title>
   </head>
   <body>
