updated html description

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Hello, my name is David. I create beautiful, full stack web experiences with secure technologies and clean and scalable code."
+      content="Hi there, I'm David. I'm a full stack develper based in Finland and I build and host apps for the internet. Thanks for visiting!"
     />
     <title>David Slade</title>
   </head>
